kubernetes/grafana/manifests/grafana-faro-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-faro-grafana
  namespace: grafana
spec:
  stripPrefix:
    prefixes:
      - "/faro-grafana"
