kubernetes/grafana/manifests/grafana-ingress-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-grafana
  namespace: grafana
spec:
  stripPrefix:
    prefixes:
      - "/grafana"
