kubernetes/grafana/manifests/grafana-agent-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-agent-ingress
  namespace: grafana

spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/agent-grafana`)
      kind: Rule
      services:
        - name: grafana-agent
          port: 80
    - match: PathPrefix(`/faro-grafana`)
      kind: Rule
      services:
        - name: grafana-faro
          port: 80
      middlewares:
        - name: stripprefix-faro-grafana
