kubernetes/grafana/manifests/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: grafana

spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: stripprefix-grafana
